# FileServer

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
src/: alembic.ini  config.py  main.py
src/api/: __init__.py  healthchek.py
src/api/v1/: files.py  users.py
src/cache/: redis.py  redis_keys.py
src/crud/: base.py  directory.py  file.py  revision.py  user.py
src/crud/abc/: postgres.py
src/db/: base.py  db.py
src/db/migration/: env.py
src/db/migration/versions/: 47a6a801b9ea_username_index.py  51c3eb4399c0_initial.py  5729a0ec2513_file_dir_revis.py  7451b106b93d_add_file_user_id.py  dc575754f077_sub_dirs.py
src/db/models/: directory.py  file.py  revision.py  user.py
src/db/sqlalchemy/: asyncpg.py
src/depends/: auth.py
src/schemas/: base.py  directory.py  file.py  revision.py  user.py
src/services/: file.py
src/tests/: conftest.py  test_file_download.py  test_file_list.py  test_file_revision.py  test_file_search.py  test_file_upload.py  test_file_view.py  test_user.py
src/tests/mocks/: file_download.py  file_upload.py  file_view.py
src/utils/: exc.py  functools.py  helpers.py  logs.py
